fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@ h4 {
 #main p {
     font-family: Helvetica, Verdana, Arial, sans-serif;
     font-size: 0.8em;
-    line-height: 1.3em;
+    line-height: 1.4em;
     margin: 12px 0;
 }
 
